# Phoenix

./: .gitignore  CMakeLists.txt  Phoenix  README.md
Commit Log/: Day1.docs  Day2.docs  Purpose
Commit Log/Gregory/: Day1.docs  Day10.docs  Day11.docs  Day2.docs  Day3.docs  Day4.docs  Day5.docs  Day6.docs  Day7.docs  Day8.docs  Day9.docs
Depends/GLAD/include/glad/: glad.h
Depends/GLAD/src/: glad.c
Depends/GLEW/src/: glew.c  glewinfo.c  visualinfo.c
Global/: Settings.h
Projects/Gryphon/: CMakeLists.txt  Gryphon.h
Projects/Gryphon/src/Core/Rendering/: Mesh.h
Projects/Gryphon/src/Core/Threading/: ExecutionManager.h  Thread.h
Projects/Gryphon/src/Core/Threading/Systems/EventSystem/: Event.h  EventSystem.h  Key.h  Mouse.h
Projects/Gryphon/src/Core/Threading/Systems/EventSystem/EventTypes/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Projects/Gryphon/src/Core/Threading/Systems/RenderingSystem/: RenderBuffer.h  RenderingSystem.cpp  RenderingSystem.h
Projects/Gryphon/src/Core/Threading/Systems/WindowingSystem/: WindowObject.h  WindowingSystem.cpp  WindowingSystem.h
Projects/Gryphon/src/Core/Types/: MultiData.h  MultiData2.h  MultiData3.h  MultiData4.h
Projects/Gryphon/src/Renderers/: Renderer.h  RendererPlatformMesh.h
Projects/Gryphon/src/Renderers/OpenGL/: OpenGL.h  OpenGLMesh.h  OpenGLMeshBuilder.h  OpenGLRenderBuffer.h
Projects/PhoenixApp/: CMakeLists.txt
Projects/PhoenixApp/src/: main.cpp
Projects/PhoenixApp/src/main/: PhoenixApplication.cpp  PhoenixApplication.h
source/: main.cpp
source/Engine/: Engine.h
source/Engine/Core/Window/: Window.h  WindowData.h
source/PhoenixApp/main/: PhoenixApplication.cpp  PhoenixApplication.h
src/: Settings.h  Window.h  main.cpp
src/Engine/: Engine.h
src/Engine/Application/: Application.h
src/Engine/Core/Threading/: ExecutionManager.h  Thread.cpp  Thread.h
src/Engine/Renderers/: Renderer.h
src/PhoenixApp/: Phoenix.h
src/PhoenixApp/main/: PhoenixApplication.cpp  PhoenixApplication.h
(+9 files in other folders)
